build and run works here